sqlxo/tests/orm/derive/try/err/not_struct.stderr
error: enums are not supported
  --> tests/orm/derive/try/err/not_struct.rs:8:1
   |
 8 | / pub enum E {
 9 | |     A,
10 | | }
   | |_^

error: `Query` supports only structs
 --> tests/orm/derive/try/err/not_struct.rs:8:10
  |
8 | pub enum E {
  |          ^
